--- a/main.html
+++ b/main.html
@@ -1,32 +1,17 @@
-<!DOCTYPE html>
+function secondHighest(arr) {
+  if (arr.length < 2) return -Infinity;
 
-<html>
+  let max = -Infinity;
+  let secondMax = -Infinity;
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  for (let num of arr) {
+    if (num > max) {
+      secondMax = max;
+      max = num;
+    } else if (num > secondMax && num < max) {
+      secondMax = num;
+    }
+  }
 
-<body>	
-	<script>
-		function secondHighest(arr) {
-			//Write your code here
-			
-		}
-
-		function Main() {
-			var n = prompt("Enter the number of elements");
-			var arr = [];
-			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
-			}
-			alert(secondHighest(arr));
-		}
-		Main();
-	</script>
-
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
-</html>
+  return (secondMax === -Infinity) ? -Infinity : secondMax;
+}
